force-app/main/default/objects/RallySprint__c/RallySprint__c.object-meta.xml
<CustomObject>
    <description>Time-boxed sprint container that groups RallyPoint issues.</description>
    <label>Rally Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rally Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>