force-app/main/default/objects/RallySprint__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Total commitment for the sprint (hours or points).</description>
    <label>Capacity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>