force-app/main/default/objects/RallySprint__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Optional sprint goal shared with the team.</description>
    <label>Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>