force-app/main/default/objects/RallySprint__c/fields/Velocity_Target__c.field-meta.xml
<CustomField>
    <fullName>Velocity_Target__c</fullName>
    <description>Expected story points to burn during the sprint.</description>
    <label>Velocity Target</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>